Fixing routes & swagger
- fix route not working 404 not found
- fix url query buat swagger
